Time: 8 ms (94.93%), Space: 47.1 MB (94.67%) - LeetHub